--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,12 @@
     font-weight: 400;
     font-style: normal;
   }
+  .montserrat-medium {
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+  }
   
   
 
