--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Martian+Mono:wght@100..800&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Martian+Mono:wght@100..800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Playwrite+AU+SA:wght@100..400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Martian+Mono:wght@100..800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playwrite+AU+SA:wght@100..400&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -17,14 +17,12 @@
 
 /* Pour créer des classes uniques, qui comprennent plusieurs properties */
 @layer utilities {
-
-  .martian-mono{
+  .martian-mono {
     font-family: "Martian Mono", monospace;
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
-    font-variation-settings:
-      "wdth" 100;
+    font-variation-settings: "wdth" 100;
   }
 
   .font-roboto {
@@ -33,13 +31,12 @@
     font-style: normal;
   }
 
-  .playwrite{
+  .playwrite {
     font-family: "Playwrite AU SA", serif;
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
   }
-  
 
   .montserrat-regular {
     font-family: "Montserrat", sans-serif;
@@ -67,8 +64,9 @@
     margin: 0 auto;
   }
 
+  /* Ecran tel est < à sm Donc: max-sm = ecran telephone et px-12 pour > à ecran telephone */
   .padding {
-    @apply px-8 py-10 sm:px-12;
+    @apply px-12 max-sm:px-5;
   }
 
   .padding-x {
